--- a/vignettes/homework-2.Rmd
+++ b/vignettes/homework-2.Rmd
@@ -7,6 +7,10 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r}
+library(bis557)
+```
+
 
 This is the 2nd homework of Yale course bis557 (due October 7th).
 
