--- a/vignettes/homework-2.Rmd
+++ b/vignettes/homework-2.Rmd
@@ -7,6 +7,13 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
 ```{r}
 library(bis557)
 ```
